[package]
name = "memory-sentinel"
authors = ["Cameron Waldron"]
version = "0.1.2"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
regex = "1.8"
serde = { version = "1.0", features = ["derive"] }
serde_yaml = "0.9"
notify-rust = "4"